--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ http://www.templatemo.com/tm-483-lumino
 
                     <section id="tm-section-1">                        
                         <div class="tm-container text-xs-center tm-section-1-inner">
-                        <embed  loop="infinite"  src="01.mp3" width="0" height="0"></embed>
+                        <audio controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
+  <source src="01.mp3" type="audio/mpeg" />
+</audio>
 <img src="img/头像2.jpg" alt="Logo" class="tm-logo">
                           <h1 class="tm-site-name">profile</h1>
                             <p class="tm-intro-text">闫庆然</p>
